# frank_bot

./: .gitignore  main.py
YOLO/: .gitignore  README.md  Test.py  __init__.py  hailo_detection_tracker.py  main.py  pi5_person_tracker.py  pi5_person_trackertest.py  readme.md  requirements.txt  run.sh  setup.sh  yolo_config__.py
arduino/: main.ino
arduino/lib/Communication/: Command.h
arduino/lib/MotorDriver/: MotorDriver.cpp  MotorDriver.h
frank_brain/: main.py  pyproject.toml  requirements.txt
frank_brain/src/communication/: serial_communicator.py
frank_brain/src/execution/: app.py  components.py
frank_brain/src/serial/: communicator.py
frank_brain/src/vosk/: listener.py
frank_brain/src/yolo_navigator/: YoloNavigator.py  utils.py
motor_control/: motor_control.ino
motor_control/src/Communication/: Command.h
motor_control/src/DiodeDriver/: DiodeDriver.cpp  DiodeDriver.h
motor_control/src/DistanceSensor/: DistanceSensor.cpp  DistanceSensor.h
motor_control/src/MotorDriver/: MotorDriver.cpp  MotorDriver.h
