[project]
name = "frank-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy<2.0.0",
    "opencv-python>=4.11.0.86",
    "pyserial>=3.5",
    "setproctitle>=1.3.6",
    "pyaudio>=0.2.14",
    "vosk>=0.3.45",
]

[tool.uv]
package = true
